cmake_minimum_required(VERSION 3.7)
project(InternetApplications)

set(CMAKE_C_STANDARD 99)

add_executable(l3-exec1 l3-exec1.c)
add_executable(l3-fork1 l3-fork1.c)
add_executable(l3-fork2 l3-fork2.c)
add_executable(l3-lseek1 l3-lseek1.c)
add_executable(l3-readwrite1 l3-readwrite1.c)
add_executable(l3-signal1 l3-signal1.c)
add_executable(l4-1 l4-1.c)
add_executable(l4-2 l4-2.c)
add_executable(l5 l5.c)
add_executable(l6-EchoClient l6-EchoClient.c)
add_executable(l6-EchoServer l6-EchoServer.c)
add_executable(l7-Cilent l7-Client.c)
add_executable(l7-Server l7-Server.c)
add_executable(dhcp-client dhcp-client.c)
add_executable(dhcp-server dhcp-server.c)
add_executable(dhcprobe dhcprobe.c)
add_executable(simple-dhcp-client simple-dhcp-client.c)